--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "react-hold-height",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "React component to hold the highest height established by a child component even though it no longer exists in the browser window",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
     "compile": "babel src --loose --out-dir lib",
     "start": "webpack --watch",
-    "prepare": "npm run clean && npm run compile",
-    "test": "mocha test/setup.js test/spec/*.js"
+    "prepare": "npm run clean && npm run compile"
   },
   "repository": {
     "type": "git",
