--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "react-hold-height",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "React component to hold the highest height established by a child component even though it no longer exists in the browser window",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
     "compile": "babel src --loose --out-dir lib",
     "start": "webpack --watch",
-    "prepare": "npm run clean && npm run compile"
+    "prepare": "npm run clean && npm run compile",
+    "test": "jest",
+    "test reset snapshot": "jest -u",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,17 @@
   ],
   "author": "Bruno de Rezende (brurez@hotmail.com)",
   "license": "MIT",
+  "jest": {
+    "setupFiles": [
+      "./test/setup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "identity-obj-proxy"
+    }
+  },
   "peerDependencies": {
     "react": ">=15.0.0",
     "react-dom": ">=15.0.0"
@@ -33,17 +48,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.1.0",
-    "expect.js": "^0.3.1",
-    "jsdom": "^11.3.0",
-    "mocha": "^4.0.1",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.1.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.8.1"
   }
