--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-hold-height",
-  "version": "0.3.1",
+  "version": "0.4.1",
   "description": "React component to hold the highest height established by a child component even though it no longer exists in the browser window",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "compile": "babel src --loose --out-dir lib",
+    "compile": "babel src --out-dir lib",
     "start": "webpack --watch",
     "prepare": "npm run clean && npm run compile",
     "test": "jest",
@@ -30,38 +30,30 @@
     "setupFiles": [
       "./test/setup.js"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
     "moduleNameMapper": {
       "^.+\\.(css|scss)$": "identity-obj-proxy"
     }
   },
   "peerDependencies": {
-    "react": ">=15.0.0",
-    "react-dom": ">=15.0.0"
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0"
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
+    "@testing-library/react": "^11.2.6",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "enzyme-to-json": "^3.1.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.2.1",
-    "react": "^16.0.0",
+    "jest": "^26.6.3",
+    "react": "^17.0.2",
     "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.8.1"
   }
